--- a/index.css
+++ b/index.css
@@ -1,43 +1,135 @@
 body{
-  height: 2000px;
+  height: 1500px;
+  margin: 0;
 }
 
+/*makes the nav bar pos*/
+.navbar {
+  overflow: hidden;
+  background-color: white;
+}
+.navbar a {                  /*Left*/
+  float: left;
+  font-size: 30px;
+  font-weight: bold;
+  color: black;
+  text-align: center;
+  padding: 16px 18px;
+  text-decoration: none;
+}
+.navbar b {                 /*Right*/
+  float: right; 
+  font-size: 30px;
+  font-weight: bold;
+  color: black;
+  text-align: center;
+  padding: 16px 18px;
+  text-decoration: none;
+}
+
+
+.drop {                   /*Dropdown position*/
+  float: right;
+  overflow: hidden;
+}
+
+.drop .droppos {          /*Dropdown size(Same as navbar)*/
+  font-size: 30px;  
+  border: none;
+  font-weight: bold;
+  color: black;
+  padding: 16px 18px;
+  background-color: white;
+  margin: 0;
+}
+
+.navbar a:hover, .drop:hover .droppos {          /*Navbar hover colour for Left and Right*/
+  background-color: red;
+}
+.navbar b:hover, .drop:hover .droppos{
+  background-color: red;
+}
+
+.drop-content {                                 /*Boxes inside the dropdown config.*/
+  display: none;
+  position: absolute;
+  background-color: white;
+  min-width: 160px;
+  box-shadow: 1px;
+}
+.drop-content a {                           
+  float: none;
+  color: black;
+  padding: 14px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.drop-content a:hover {                       /*Dropdown box colour*/
+  background-color: lightgrey;
+}
+
+.drop:hover .drop-content {                     /*Displays stuff on screen*/
+  display: block;
+}
+
+
+
 .title{
-  font-family:  Helvetica, Arial, sans-serif;
   font-size: 65px;
   font-variant: normal;
-  font-weight: bold;
+  font-weight: bolder;
   line-height: 1.3em;
   text-align: center;
   margin: 0px;
+  padding: 240px;
   color: white;
 }
 
 .purpose{
-  color: white;
-  font-size: 20px;
+  color: black;
+  font-size: 40px;
+  text-align: center;
+  width:50%;
+  margin-left: auto;
+  margin-right:auto;
+}
+
+.big{
+  color: black;
+  font-size: 60px;
   text-align: center;
 }
+
 
 
 
 
 .flex-storage{
   display: flex;
+  list-style: none;
   flex-direction: row-reverse;
   justify-content: center;
 }
 .flex-item{
   border-radius: 30px;
-  font-size: 70px;
+  font-size: 50px;
   font-weight: bolder;
+  list-style: none;
   text-align: center;
-  background-color: white;
+  background-color: lightblue;
   color: black;
-  margin: 10px;
+  margin: 150px;
   padding: 100px;
+  width:20%;
 }
-@media (max-width: 477px) {
+
+.flex-item img{
+  width:100%;
+}
+
+@media (max-height: 200px) {
   .flex-container{
     flex-wrap: wrap
   }
@@ -48,12 +140,19 @@ body{
 
 
 
-
 section{
   color: black;
-  font-size: 16px;
+  font-size: 28px;
 }
 
-.background{
-  background: url("https://img.freepik.com/free-photo/cool-geometric-triangular-figure-neon-laser-light-great-backgrounds-wallpapers_181624-9331.jpg?w=2000");
+.Tbackground{
+  background: url("Images/Asg1_auto_x2.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  margin: 0px;
+}
+
+.Bbackground{
+  background-color:lightgrey;
+  margin: 0px;
 }
