--- a/recommendations.css
+++ b/recommendations.css
@@ -1,11 +1,11 @@
 body{
     width: auto;
-    height: 750px;
+    height: auto;
     margin: 0;
 }
 
 .background{
-    background: url("https://img.freepik.com/free-vector/abstract-splashed-watercolor-textured-background_53876-8753.jpg?fit=crop&w=240&h=130?auto=format&fit=crop&w=480&h=260");
+    background: url("https://th.bing.com/th/id/OIP.qfko95Wg4bkch7c8ssw8HAHaE8?pid=ImgDet&w=768&h=512&rs=1");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     
@@ -18,48 +18,10 @@ body{
     background-color: white;
   }
   .space{
-    padding: 10px
-  }
-
-  .title{
-    font-size: 65px;
-    font-variant: normal;
-    font-weight: bolder;
-    text-align: center;
-    margin: 100px;
-    padding-top: 500px;
-    color: black;
+    height: 150px ;
   }
 
 
-.flex-storage{
-    display: flex;
-    list-style: none;
-    flex-direction: column-reverse;
-    justify-content: center;
-    box-shadow: 15px darkblue;
-  }
-  .flex-item{
-    font-size: 50px;
-    font-weight: bolder;
-    list-style: none;
-    text-align: left;
-    box-shadow: 15px darkblue;
-    background-color: lightblue;
-    color: black;
-    margin: 50px;
-    padding: 50px;
-    width:80%;
-  }
-  
-  .flex-item img{
-    width:25%;
-  }
-
-  section{
-    color: black;
-    font-size: 28px;
-  }
 
 /*makes the nav bar pos*/
 .navbar {
@@ -138,7 +100,77 @@ body{
 
 
 
+  .title{
+    width:100%;
+    font-size: 65px;
+    font-variant: normal;
+    font-weight: bolder;
+    text-align: center;
+    /*margin: 100px;*/
+    color: black;
+  }
 
+.title-storage{
+    display: flex;
+    list-style: none;
+    flex-direction: row-reverse;
+    justify-content: center;
+    box-shadow: 15px darkblue;
+}
+
+.title-item{
+    border-radius: 50px;
+    font-size: 50px;
+    font-weight: bolder;
+    list-style: none;
+    text-align: center;
+    box-shadow: 15px darkblue;
+    background-color: lightblue;
+    color: black;
+    padding: 30px;
+    width:30%;
+}
+
+
+.flex-storage{
+    display: flex;
+    list-style: none;
+    flex-direction: column-reverse;
+    justify-content: center;
+    border-style: solid;
+    border-width: 10px;
+    border-color: lightblue;     
+    
+  }
+  .flex-item{
+    font-size: 50px;
+    font-weight: bolder;
+    list-style: none;
+    text-align: left;
+    background-color: blue;
+    border-bottom: 10px;
+    border-color: blue;
+    color: black;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    padding-right: 100px;    
+    width:1735px;
+  }
+  
+  .flex-item img{
+    width:25%;
+    margin-right: 20px;
+  }
+
+  section{
+    color: black;
+    font-size: 28px;
+  }
+
+  .img_pos{
+    background-color: blue;
+    
+  }
 
 
 
