--- a/HowToBuild.css
+++ b/HowToBuild.css
@@ -1,34 +1,15 @@
 body{
+    height: 750px;
     width: auto;
-    height: auto;
     margin: 0;
 }
-
-.background{
-    background: url("https://th.bing.com/th/id/OIP.qfko95Wg4bkch7c8ssw8HAHaE8?pid=ImgDet&w=768&h=512&rs=1");
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    
-    margin: 0px;
-}
-.back-block {
-    position: relative;
-    bottom: 10px;
-    right: 10px;
-    background-color: white;
-  }
-  .space{
-    height: 150px ;
-  }
-
-
-
+  
 /*makes the nav bar pos*/
-.navbar {
+  .navbar {
     overflow: hidden;
     background-color: white;
     margin-bottom: 10px;
-  }
+}
   .navbar a {                  /*Left*/
     float: left;
     font-size: 30px;
@@ -38,7 +19,7 @@ body{
     padding: 16px 18px;
     text-decoration: none;
   
-  }
+}
   .navbar b {                 /*Right*/
     float: right; 
     font-size: 30px;
@@ -47,13 +28,13 @@ body{
     text-align: center;
     padding: 16px 18px;
     text-decoration: none;
-  }
+}
   
   
   .drop {                   /*Dropdown position*/
     float: right;
     overflow: hidden;
-  }
+}
   
   .drop .droppos {          /*Dropdown size(Same as navbar)*/
     font-size: 30px;  
@@ -63,14 +44,14 @@ body{
     padding: 16px 18px;
     background-color: white;
     margin: 0;
-  }
+}
   
   .navbar a:hover, .drop:hover .droppos {          /*Navbar hover colour for Left and Right*/
     background-color: red;
-  }
+}
   .navbar b:hover, .drop:hover .droppos{
     background-color: red;
-  }
+}
   
   .drop-content {                                 /*Boxes inside the dropdown config.*/
     display: none;
@@ -78,27 +59,33 @@ body{
     background-color: white;
     min-width: 160px;
     box-shadow: 1px;
-  }
-  .drop-content a {                           
+}
+.drop-content a {                           
     float: none;
     color: black;
     padding: 14px 16px;
     text-decoration: none;
     display: block;
     text-align: left;
-  }
+}
   
-  .drop-content a:hover {                       /*Dropdown box colour*/
+.drop-content a:hover {                       /*Dropdown box colour*/
     background-color: lightgrey;
-  }
+}
   
-  .drop:hover .drop-content {                     /*Displays stuff on screen*/
+.drop:hover .drop-content {                     /*Displays stuff on screen*/
     display: block;
+}
+
+
+
+
+.background{
+    background-color: aliceblue;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    margin: 0px;
   }
-
-
-
-
 
   .title{
     width:100%;
@@ -118,57 +105,6 @@ body{
     box-shadow: 15px darkblue;
 }
 
-.title-item{
-    border-radius: 50px;
-    font-size: 50px;
-    font-weight: bolder;
-    list-style: none;
-    text-align: center;
-    box-shadow: 15px darkblue;
-    background-color: lightblue;
-    color: black;
-    padding: 30px;
-    width:30%;
-}
-
-
-.flex-storage{
-    display: flex;
-    list-style: none;
-    flex-direction: column-reverse;
-    justify-content: center;
-    border-style: solid;
-    border-width: 10px;
-    border-color: lightblue;     
-    
-  }
-  .flex-item{
-    font-size: 50px;
-    font-weight: bolder;
-    list-style: none;
-    text-align: left;
-    background-color: blue;
-    border-bottom: 10px;
-    border-color: blue;
-    color: black;
-    padding-top: 100px;
-    padding-bottom: 100px;
-    padding-right: 100px;    
-    width:1735px;
-  }
-  .flex-direction{
-    flex-direction: row-reverse;
-  }
-  
-  .flex-item img{
-    width:25%;
-    margin-right: 20px;
-  }
-
-  section{
-    color: black;
-    font-size: 28px;
-  }
 
 
 
@@ -181,7 +117,10 @@ body{
 
 
 
-.footer_container{                          /*Background of footer*/
+
+
+
+  .footer_container{                          /*Background of footer*/
     background-color: black;
     padding-bottom: 5px;
   }
