--- a/hardwareinfo.css
+++ b/hardwareinfo.css
@@ -75,3 +75,153 @@ body{
   .drop:hover .drop-content {                     /*Displays stuff on screen*/
     display: block;
   }
+
+
+
+  .background{
+    background: url("Images/Hardware\ info\ BG.jpg");
+    
+    background-size: 100%;
+    margin: 0px;
+  }
+
+
+  .title-storage{
+    display: flex;
+    list-style: none;
+    flex-direction: row-reverse;
+    justify-content: center;
+    box-shadow: 15px darkblue;
+}
+
+.title-item{
+    border-radius: 50px;
+    font-size: 50px;
+    font-weight: bolder;
+    list-style: none;
+    text-align: center;
+    box-shadow: 15px darkblue;
+    background-color: lightblue;
+    color: black;
+    padding: 30px;
+    width:30%;
+}
+
+.title-section{
+  color: black;
+  font-size: 28px;
+  padding-top: 30px;
+}
+
+
+  .flex-storage{
+    display: flex;
+    width:100%;
+    list-style: none;
+    flex-direction: column-reverse;
+    justify-content: center;
+    border-top:10px;
+    border-bottom:10px;
+    border-left:0;
+    border-right:0;
+    border-color:darkmagenta;
+    border-style:solid;    
+    
+  }
+  .flex-item{
+    display: flex;
+    justify-content: center;
+    font-size: 50px;
+    font-weight: bolder;
+    list-style: none;
+    text-align: left;
+    background-color: rgb(70, 2, 70);
+    border-bottom: 10px;
+    border-color: rgb(70, 2, 70);
+    color: black;
+    padding-top: 75px;
+    padding-bottom: 75px;
+    width:100%;
+  }
+
+  
+  .title_pos{
+    color: white;
+    background-color:rgb(70, 2, 70);
+    width: 60%;
+    padding-left:20px;
+    text-align: left;
+  }
+  .img_pos{
+    width: 40%;
+    text-align: center;
+  }
+  
+  .flex-item img{
+    width:60%;
+  }
+
+
+  section{
+    color: white;
+    font-size: 28px;
+    padding-top: 30px;
+  }
+
+  .space{
+    height: 150px ;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+  .footer_container{                          /*Background of footer*/
+    background-color: black;
+    padding-bottom: 5px;
+  }
+  .footer_txt{                               /*Contains all configs on text in footer*/
+    width: 80%;
+    height: 400px;
+    background-color: black;
+    color: white;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    justify-content: center;
+  }
+  
+  .footer_head{
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    margin-right: 100px;
+    margin-left: 300px;
+  }
+  
+  .footer_head h2{
+    margin-bottom: 20px;
+    font-size: 30px;
+  }
+  
+  .footer_head a{
+    background-color: black;
+    color: white;
+    text-decoration: 0;
+    margin-bottom: 10px;
+    font-size: 18px;
+  }
+  
+  .footer_head a:hover{
+    background-color: black;
+    color: blueviolet;
+  }
+
