--- a/index.css
+++ b/index.css
@@ -10,18 +10,9 @@ body{
   background-color: white;
   margin-bottom: 10px;
 }
-.navbar a {                  /*Left*/
-  float: left;
-  font-size: 30px;
-  font-weight: bold;
-  color: black;
-  text-align: center;
-  padding: 16px 18px;
-  text-decoration: none;
 
-}
-.navbar b {                 /*Right*/
-  float: right; 
+.navbar a {                 /*Right*/
+  float: left; 
   font-size: 30px;
   font-weight: bold;
   color: black;
@@ -29,10 +20,11 @@ body{
   padding: 16px 18px;
   text-decoration: none;
 }
+
 
 
 .drop {                   /*Dropdown position*/
-  float: right;
+  float: left;
   overflow: hidden;
 }
 
