--- a/hardwareinfo.css
+++ b/hardwareinfo.css
@@ -19,19 +19,11 @@ body{
     padding: 16px 18px;
     text-decoration: none;
   }
-  .navbar b {                 /*Right*/
-    float: right; 
-    font-size: 30px;
-    font-weight: bold;
-    color: black;
-    text-align: center;
-    padding: 16px 18px;
-    text-decoration: none;
-  }
+
   
   
   .drop {                   /*Dropdown position*/
-    float: right;
+    float: left;
     overflow: hidden;
   }
   
