--- a/feedback.css
+++ b/feedback.css
@@ -1,43 +1,134 @@
-html, body {
-    height: 200%;
-    width: 90%;
+
+  
+/*makes the nav bar pos*/
+.navbar {
+  overflow: hidden;
+  background-color: white;
+  margin-bottom: 10px;
+}
+.navbar a {                  /*Left*/
+  float: left;
+  font-size: 30px;
+  font-weight: bold;
+  color: black;
+  text-align: center;
+  padding: 16px 18px;
+  text-decoration: none;
+
+}
+
+
+.drop {                   /*Dropdown position*/
+  float: left;
+  overflow: hidden;
+}
+
+.drop .droppos {          /*Dropdown size(Same as navbar)*/
+  font-size: 30px;  
+  border: none;
+  font-weight: bold;
+  color: black;
+  padding: 16px 18px;
+  background-color: white;
+  margin: 0;
+}
+
+.navbar a:hover, .drop:hover .droppos {          /*Navbar hover colour for Left and Right*/
+  background-color: red;
+}
+
+.drop-content {                                 /*Boxes inside the dropdown config.*/
+  display: none;
+  position: absolute;
+  background-color: white;
+  min-width: 160px;
+  box-shadow: 1px;
+}
+.drop-content a {                           
+  float: none;
+  color: black;
+  padding: 14px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.drop-content a:hover {                       /*Dropdown box colour*/
+  background-color: lightgrey;
+}
+
+.drop:hover .drop-content {                     /*Displays stuff on screen*/
+  display: block;
+}
+
+  
+  
+.background{
+  background: url("https://images.ctfassets.net/pdf29us7flmy/2ZtlOujWNf4ztl5wbRnTpC/4a394c414c6a2e3f68749802e5e4d042/GettyImages-689291632_optimized.jpg?w=720&q=100&fm=jpg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  margin: 0%;
+}
+
+
+
+.title-storage{
+  display: flex;
+  list-style: none;
+  flex-direction: row-reverse;
+  justify-content: center;
+  box-shadow: 15px darkblue;
+}
+
+.title-item{
+  border-radius: 30px;
+  font-size: 50px;
+  font-weight: bolder;
+  list-style: none;
+  text-align: center;
+  box-shadow: 15px darkblue;
+  background-color: lightblue;
+  color: black;
+  padding: 30px;
+  width:30%;
+}
+
+.space{
+  height: 150px ;
+}
+
+
+.info-storage{
+  display: flex;
+  list-style: none;
+  flex-direction: row-reverse;
+  justify-content: center;
+  box-shadow: 15px darkblue;
+}
+
+
+.info-item{
+border-radius: 100px;
+font-size: 30px;
+font-weight: bolder;
+list-style: none;
+text-align: left;
+box-shadow: 15px darkblue;
+background-color: yellow  ;
+color: black;
+padding: 50px;
+width:80%;
+}
+
+.start-pos{
+  border-radius: 200px;
+  font-size: 50px;
+  font-weight: bolder;
+  list-style: none;
+  text-align: center;
+  box-shadow: 15px darkblue;
+  background-color: yellow  ;
+  color: black;
+  padding: 50px;
+  width:90%;
   }
-  
-  h3{
-    font-size: 18px;
-  }
-  
-  div {
-      width: 45%;
-      float: left;
-      margin-right: 10px;
-  }
-  
-  .poster {
-      max-width: 500px;
-      height: 900px;
-      background-color: lightblue ;
-              
-    position: relative;
-  }
-    
-  .cover{
-    background-size: cover;
-  }
-  
-  
-  h3 {
-      background-color: rgba(0, 0, 0, 0.3);
-      position: absolute;
-      top: 50px;
-      left: 50px;
-      padding: 10px;
-      margin: 0;
-      color: white;
-  }
-  
-  
-  
-  .background{
-      background: url("https://images.ctfassets.net/pdf29us7flmy/2ZtlOujWNf4ztl5wbRnTpC/4a394c414c6a2e3f68749802e5e4d042/GettyImages-689291632_optimized.jpg?w=720&q=100&fm=jpg");
-    }
