--- a/feedback.css
+++ b/feedback.css
@@ -67,6 +67,7 @@
   background: url("https://images.ctfassets.net/pdf29us7flmy/2ZtlOujWNf4ztl5wbRnTpC/4a394c414c6a2e3f68749802e5e4d042/GettyImages-689291632_optimized.jpg?w=720&q=100&fm=jpg");
   background-repeat: no-repeat;
   background-size: 100%;
+  background-attachment: fixed;
   margin: 0%;
 }
 
@@ -120,15 +121,53 @@ padding: 50px;
 width:80%;
 }
 
-.start-pos{
-  border-radius: 200px;
-  font-size: 50px;
-  font-weight: bolder;
-  list-style: none;
+.credentials{
   text-align: center;
-  box-shadow: 15px darkblue;
-  background-color: yellow  ;
-  color: black;
-  padding: 50px;
-  width:90%;
-  }
+  justify-content: center;
+}
+
+
+
+
+
+
+.footer_container{                          /*Background of footer*/
+  background-color: black;
+  padding-bottom: 5px;
+}
+.footer_txt{                               /*Contains all configs on text in footer*/
+  width: 80%;
+  height: 400px;
+  background-color: black;
+  color: white;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+  justify-content: center;
+}
+
+.footer_head{
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  margin-right: 100px;
+  margin-left: 300px;
+}
+
+.footer_head h2{
+  margin-bottom: 20px;
+  font-size: 30px;
+}
+
+.footer_head a{
+  background-color: black;
+  color: white;
+  text-decoration: 0;
+  margin-bottom: 10px;
+  font-size: 18px;
+}
+
+.footer_head a:hover{
+  background-color: black;
+  color: blueviolet;
+}
