--- a/index.css
+++ b/index.css
@@ -40,10 +40,9 @@ body{
 
 .navbar a:hover, .drop:hover .droppos {          /*Navbar hover colour for Left and Right*/
   background-color: red;
+  transition: 1s;
 }
-.navbar b:hover, .drop:hover .droppos{
-  background-color: red;
-}
+
 
 .drop-content {                                 /*Boxes inside the dropdown config.*/
   display: none;
@@ -63,6 +62,7 @@ body{
 
 .drop-content a:hover {                       /*Dropdown box colour*/
   background-color: lightgrey;
+  transition: 1s;
 }
 
 .drop:hover .drop-content {                     /*Displays stuff on screen*/
@@ -134,14 +134,6 @@ body{
   width:100%;
 }
 
-@media (max-height: 200px) {
-  .flex-container{
-    flex-wrap: wrap
-  }
-  .flex-item{
-    flex-basis: 30%;
-  }
-}
 
 
 
@@ -217,4 +209,46 @@ section{
 .footer_head a:hover{
   background-color: black;
   color: blueviolet;
+}
+
+
+@media (max-height: 844px) {
+
+  .flex-storage{
+    display: block;
+    cursor: pointer;
+  }
+  .flex-storage .phone{
+    width: 30px;
+    height: 3px;
+    background: white;
+    margin: 6px 0;
+
+  }
+  .navbar{
+    position: absolute;
+    top: 80px;
+    left: 0;
+    right: 0;
+    width: 100vw;
+    background: black;
+    transition: 0.2s;
+  }
+  .navbar .block{
+    display: block;
+    width: fit-content;
+    margin: 80px auto 0 auto;
+    text-align: center;
+    transition: 0.5s;
+  }
+
+  .navbar a {                 /*Right*/
+    float: left; 
+    font-size: 10px;
+    font-weight: bold;
+    color: black;
+    text-align: center;
+    padding: 16px 18px;
+    text-decoration: none;
+  }
 }
