--- a/index.css
+++ b/index.css
@@ -11,7 +11,19 @@ body{
   margin-bottom: 10px;
 }
 
-.navbar a {                 /*Right*/
+.navbar-phone{
+  display: none;
+}
+
+.navbar .block{
+  display: flex;
+}
+
+.block-info a :hover{ 
+  background: red;
+}
+
+.navbar .block .block-info a{
   float: left; 
   font-size: 30px;
   font-weight: bold;
@@ -23,51 +35,6 @@ body{
 
 
 
-.drop {                   /*Dropdown position*/
-  float: left;
-  overflow: hidden;
-}
-
-.drop .droppos {          /*Dropdown size(Same as navbar)*/
-  font-size: 30px;  
-  border: none;
-  font-weight: bold;
-  color: black;
-  padding: 16px 18px;
-  background-color: white;
-  margin: 0;
-}
-
-.navbar a:hover, .drop:hover .droppos {          /*Navbar hover colour for Left and Right*/
-  background-color: red;
-  transition: 1s;
-}
-
-
-.drop-content {                                 /*Boxes inside the dropdown config.*/
-  display: none;
-  position: absolute;
-  background-color: white;
-  min-width: 160px;
-  box-shadow: 1px;
-}
-.drop-content a {                           
-  float: none;
-  color: black;
-  padding: 14px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.drop-content a:hover {                       /*Dropdown box colour*/
-  background-color: lightgrey;
-  transition: 1s;
-}
-
-.drop:hover .drop-content {                     /*Displays stuff on screen*/
-  display: block;
-}
 
 
 
@@ -212,13 +179,13 @@ section{
 }
 
 
-@media (max-height: 844px) {
+@media (max-height: 320px) {
 
-  .flex-storage{
+  .navbar-phone{
     display: block;
     cursor: pointer;
   }
-  .flex-storage .phone{
+  .navbar-phone .phone{
     width: 30px;
     height: 3px;
     background: white;
@@ -242,7 +209,7 @@ section{
     transition: 0.5s;
   }
 
-  .navbar a {                 /*Right*/
+  .navbar .block .block-info a {                 /*Right*/
     float: left; 
     font-size: 10px;
     font-weight: bold;
