--- a/recommendations.css
+++ b/recommendations.css
@@ -24,65 +24,32 @@ body{
 
 /*makes the nav bar pos*/
 .navbar {
-    overflow: hidden;
-    background-color: white;
-    margin-bottom: 10px;
-  }
-  .navbar a {                  /*Left*/
-    float: left;
-    font-size: 30px;
-    font-weight: bold;
-    color: black;
-    text-align: center;
-    padding: 16px 18px;
-    text-decoration: none;
-  
-  }
+  overflow: hidden;
+  background-color: white;
+  margin-bottom: 10px;
+}
 
-  
-  .drop {                   /*Dropdown position*/
-    float: left;
-    overflow: hidden;
-  }
-  
-  .drop .droppos {          /*Dropdown size(Same as navbar)*/
-    font-size: 30px;  
-    border: none;
-    font-weight: bold;
-    color: black;
-    padding: 16px 18px;
-    background-color: white;
-    margin: 0;
-  }
-  
-  .navbar a:hover, .drop:hover .droppos {          /*Navbar hover colour for Left and Right*/
-    background-color: red;
-  }
+.navbar-phone{
+  display: none;
+}
 
-  .drop-content {                                 /*Boxes inside the dropdown config.*/
-    display: none;
-    position: absolute;
-    background-color: white;
-    min-width: 160px;
-    box-shadow: 1px;
-  }
-  .drop-content a {                           
-    float: none;
-    color: black;
-    padding: 14px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-  
-  .drop-content a:hover {                       /*Dropdown box colour*/
-    background-color: lightgrey;
-  }
-  
-  .drop:hover .drop-content {                     /*Displays stuff on screen*/
-    display: block;
-  }
+.navbar .block{
+  display: flex;
+}
 
+.navbar a :hover, .block:hover .block-info:hover  { 
+  background: red;
+}
+
+.navbar .block .block-info a{
+  float: left; 
+  font-size: 30px;
+  font-weight: bold;
+  color: black;
+  text-align: center;
+  padding: 16px 18px;
+  text-decoration: none;
+}
 
 
 
