--- a/feedback.css
+++ b/feedback.css
@@ -1,10 +1,14 @@
-
+body{
+  height: 900px;
+  width: auto;
+  margin: 0;
+}
   
 /*makes the nav bar pos*/
 .navbar {
   overflow: hidden;
   background-color: white;
-  margin-bottom: 10px;
+  margin-bottom: 0px;
 }
 
 .navbar-phone{
