--- a/feedback.css
+++ b/feedback.css
@@ -87,7 +87,7 @@ font-weight: bolder;
 list-style: none;
 text-align: left;
 box-shadow: 15px darkblue;
-background-color: yellow  ;
+background-color: peachpuff ;
 color: black;
 padding: 50px;
 width:80%;
